# bugbodies

./: .gitignore  CLAUDE.md  README.md  bugbodies-build-spec.md  claude-project-prompt.md
extension/: manifest.json  meetings.html  meetings.js  offscreen.js  permission.html  permission.js  popup.html  popup.js  service-worker.js  transcript.html  transcript.js
helper/: README.md  pyproject.toml
helper/bugbodies_helper/: __init__.py  app.py  cli.py  config.py  pipeline.py  store.py
