[project]
name = "bugbodies-helper"
version = "0.1.0"
description = "Local helper for the bugbodies interview note-taker: owns the recordings tree, runs faster-whisper transcription, serves meetings to the extension."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.0",
]

[project.scripts]
helper = "bugbodies_helper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bugbodies_helper"]
